changed precedence rules for FOREACH and REPL in parser

--- a/src/Makefile
+++ b/src/Makefile
@@ -16,7 +16,7 @@ dbg: cryptoverif_dbg
 	ocamllex $<
 
 %.ml %.mli: %.mly
-	ocamlyacc $<
+	ocamlyacc -v $<
 
 cryptoverif:$(OBJECTSOPT)
 	ocamlopt -o cryptoverif str.cmxa $(OBJECTSOPT)
