generate PV lib

--- a/build
+++ b/build
@@ -32,8 +32,10 @@ ocamlopt -o hashgen hashgen.ml
 
 ./hashgen 1 10 > hashoracles.cvl
 ./hashgen -out oracles 1 10 > hashoracles.ocvl
+./hashgen -out proverif 1 10 > hashoracles.pvl
 
 cat commonlib.cvl hash_prefix.cvl hashoracles.cvl hash_suffix.cvl specific.cvl > ../default.cvl
 cat commonlib.cvl hash_prefix.cvl hashoracles.ocvl hash_suffix.cvl specific.ocvl > ../default.ocvl
+cat crypto.pvl hashoracles.pvl hash_suffix.cvl > ../cryptoverif.pvl
 
 cd ..
