collision exp(X,x) = Y also in DH_good_group

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,71 @@ docs/manual.blg
 docs/manual.pdf
 docs/manual.ps
 docs/manual.out
+
+examples/arinc823/arinc823.cvl
+examples/arinc823/publickey/arinc823-public-key.AUTHENTICATION.NOREPLAY_PROT.cv
+examples/arinc823/publickey/arinc823-public-key.AUTHENTICATION.REPLAY_PROT.cv
+examples/arinc823/publickey/arinc823-public-key.KEY_SECRECY.NOREPLAY_PROT.cv
+examples/arinc823/publickey/arinc823-public-key.KEY_SECRECY.REPLAY_PROT.cv
+examples/arinc823/publickey/arinc823-public-key.SECRECY.NOREPLAY_PROT.cv
+examples/arinc823/publickey/arinc823-public-key.SECRECY.REPLAY_PROT.cv
+examples/arinc823/publickey/arinc823-public-key.fixed.AUTHENTICATION.COMPROMISE_U.REPLAY_PROT.cv
+examples/arinc823/publickey/arinc823-public-key.fixed.AUTHENTICATION.COMPROMISE_V.REPLAY_PROT.cv
+examples/arinc823/publickey/arinc823-public-key.fixed.AUTHENTICATION.NO_COMPROMISE.REPLAY_PROT.cv
+examples/arinc823/publickey/arinc823-public-key.fixed.KEY_SECRECY.REPLAY_PROT.cv
+examples/arinc823/publickey/arinc823-public-key.fixed.SECRECY.REPLAY_PROT.cv
+examples/arinc823/sharedkey/arinc823-secret-key.AUTHENTICATION.ORIGINAL.cv
+examples/arinc823/sharedkey/arinc823-secret-key.AUTHENTICATION.REPLAY_PROT.cv
+examples/arinc823/sharedkey/arinc823-secret-key.AUTHENTICATION.SINGLE_TU.cv
+examples/arinc823/sharedkey/arinc823-secret-key.KEY_SECRECY.ORIGINAL.cv
+examples/arinc823/sharedkey/arinc823-secret-key.KEY_SECRECY.REPLAY_PROT.cv
+examples/arinc823/sharedkey/arinc823-secret-key.KEY_SECRECY.SINGLE_TU.cv
+examples/arinc823/sharedkey/arinc823-secret-key.SECRECY.ORIGINAL.cv
+examples/arinc823/sharedkey/arinc823-secret-key.SECRECY.REPLAY_PROT.cv
+examples/arinc823/sharedkey/arinc823-secret-key.SECRECY.SINGLE_TU.cv
+examples/arinc823/sharedkey/arinc823-secret-key.UKS.ORIGINAL.cv
+examples/arinc823/sharedkey/arinc823-secret-key.UKS.REPLAY_PROT.cv
+examples/arinc823/sharedkey/arinc823-secret-key.UKS.SINGLE_TU.cv
+examples/kerberos/BasicKerberos_keyuse.key_AK.loc1.cv
+examples/kerberos/BasicKerberos_keyuse.key_AK.loc2.cv
+examples/kerberos/BasicKerberos_keyuse.key_AK.loc3.cv
+examples/kerberos/BasicKerberos_keyuse.key_SK.loc1.cv
+examples/kerberos/BasicKerberos_keyuse.key_SK.loc2.cv
+examples/kerberos/BasicKerberos_keyuse.key_SK.loc3.cv
+examples/kerberos/PublicKeyKerberos_keyuse.key_AK.loc1.cv
+examples/kerberos/PublicKeyKerberos_keyuse.key_AK.loc2.cv
+examples/kerberos/PublicKeyKerberos_keyuse.key_AK.loc3.cv
+examples/kerberos/PublicKeyKerberos_keyuse.key_SK.loc1.cv
+examples/kerberos/PublicKeyKerberos_keyuse.key_SK.loc2.cv
+examples/kerberos/PublicKeyKerberos_keyuse.key_SK.loc3.cv
+examples/textsecure/TextSecure-AA.FS.NO_REPLAY_PROT.cv
+examples/textsecure/TextSecure-AA.FS.REPLAY_PROT.cv
+examples/textsecure/TextSecure-AA.STD.NO_REPLAY_PROT.cv
+examples/textsecure/TextSecure-AA.STD.REPLAY_PROT.cv
+examples/textsecure/TextSecure-AB-BA.FS.NO_REPLAY_PROT.cv
+examples/textsecure/TextSecure-AB-BA.FS.REPLAY_PROT.cv
+examples/textsecure/TextSecure-AB-BA.STD.NO_REPLAY_PROT.cv
+examples/textsecure/TextSecure-AB-BA.STD.REPLAY_PROT.cv
+examples/textsecure/TextSecure-KCI.NO_REPLAY_PROT.cv
+examples/textsecure/TextSecure-KCI.REPLAY_PROT.cv
+examplesnd/textsecure/TextSecure-AA.FS.NO_REPLAY_PROT.cv
+examplesnd/textsecure/TextSecure-AA.FS.REPLAY_PROT.cv
+examplesnd/textsecure/TextSecure-AA.STD.NO_REPLAY_PROT.cv
+examplesnd/textsecure/TextSecure-AA.STD.REPLAY_PROT.cv
+examplesnd/textsecure/TextSecure-AB-BA.FS.NO_REPLAY_PROT.cv
+examplesnd/textsecure/TextSecure-AB-BA.FS.REPLAY_PROT.cv
+examplesnd/textsecure/TextSecure-AB-BA.STD.NO_REPLAY_PROT.cv
+examplesnd/textsecure/TextSecure-AB-BA.STD.REPLAY_PROT.cv
+examplesnd/textsecure/TextSecure-KCI.NO_REPLAY_PROT.cv
+examplesnd/textsecure/TextSecure-KCI.REPLAY_PROT.cv
+implementation/ssh/ssh-secrecy-key-EKCC.ocv
+implementation/ssh/ssh-secrecy-key-EKSC.ocv
+implementation/ssh/ssh-secrecy-key-IVCC.ocv
+implementation/ssh/ssh-secrecy-key-IVSC.ocv
+implementation/ssh/ssh-secrecy-key-MKCC.ocv
+implementation/ssh/ssh-secrecy-key-MKSC.ocv
+implementation/ssh/ssh-secrecy-key.ocv
+tests
+
+*.cv
+*.out
