--- a/build
+++ b/build
@@ -34,8 +34,8 @@ ocamlopt -o hashgen hashgen.ml
 ./hashgen -out oracles 1 10 > hashoracles.ocvl
 ./hashgen -out proverif 1 10 > hashoracles.pvl
 
-cat commonlib.cvl hash_prefix.cvl hashoracles.cvl hash_suffix.cvl specific.cvl > ../default.cvl
-cat commonlib.cvl hash_prefix.cvl hashoracles.ocvl hash_suffix.cvl specific.ocvl > ../default.ocvl
-cat crypto.pvl hashoracles.pvl hash_suffix.cvl > ../cryptoverif.pvl
+cat commonlib.cvl hashoracles.cvl > ../default.cvl
+cat commonlib.cvl hashoracles.ocvl > ../default.ocvl
+cat crypto.pvl hashoracles.pvl > ../cryptoverif.pvl
 
 cd ..
