--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ src/*.o
 src/lexer.ml
 src/parser.ml
 src/parser.mli
+src/parser.output
 
 converter/*.cmi
 converter/*.cmx
@@ -120,6 +121,63 @@ implementation/ssh/ssh-secrecy-key-IVSC.ocv
 implementation/ssh/ssh-secrecy-key-MKCC.ocv
 implementation/ssh/ssh-secrecy-key-MKSC.ocv
 implementation/ssh/ssh-secrecy-key.ocv
+implementation/*/*.cmi
+implementation/*/*.cmx
+implementation/*/*.cmo
+implementation/*/*.o
+implementation/*.cmi
+implementation/*.cmx
+implementation/*.cmo
+implementation/*.o
+implementation/crypto.ml
+examples/textsecure/indiff.aux
+examples/textsecure/indiff.bbl
+examples/textsecure/indiff.blg
+examples/textsecure/indiff.log
+examples/textsecure/indiff.pdf
+implementation/nspk/A
+implementation/nspk/Akeygen
+implementation/nspk/B
+implementation/nspk/Bkeygen
+implementation/nspk/ONS_A.ml
+implementation/nspk/ONS_A.mli
+implementation/nspk/ONS_AGenKey.ml
+implementation/nspk/ONS_AGenKey.mli
+implementation/nspk/ONS_B.ml
+implementation/nspk/ONS_B.mli
+implementation/nspk/ONS_BGenKey.ml
+implementation/nspk/ONS_BGenKey.mli
+implementation/nspk/ONS_Keygen.ml
+implementation/nspk/ONS_Keygen.mli
+implementation/nspk/ONS_S.ml
+implementation/nspk/ONS_S.mli
+implementation/nspk/S
+implementation/nspk/Skeygen
+implementation/nspk/test
+implementation/wlsk/WLSK_Init.ml
+implementation/wlsk/WLSK_Init.mli
+implementation/wlsk/WLSK_Resp.ml
+implementation/wlsk/WLSK_Resp.mli
+implementation/wlsk/WLSK_S.ml
+implementation/wlsk/WLSK_S.mli
+implementation/wlsk/WLSK_keygen.ml
+implementation/wlsk/WLSK_keygen.mli
+implementation/wlsk/init
+implementation/wlsk/keygen
+implementation/wlsk/resp
+implementation/wlsk/server
+implementation/wlsk/test_wlsk
+implementation/ssh/SSH_C.ml
+implementation/ssh/SSH_C.mli
+implementation/ssh/SSH_Keygen.ml
+implementation/ssh/SSH_Keygen.mli
+implementation/ssh/SSH_S.ml
+implementation/ssh/SSH_S.mli
+implementation/ssh/add_key
+implementation/ssh/client
+implementation/ssh/keygen
+implementation/ssh/server
+
 tests
 
 *.cv
