--- a/.gitignore
+++ b/.gitignore
@@ -93,16 +93,16 @@ examples/textsecure/TextSecure-AB-BA.STD.NO_REPLAY_PROT.cv
 examples/textsecure/TextSecure-AB-BA.STD.REPLAY_PROT.cv
 examples/textsecure/TextSecure-KCI.NO_REPLAY_PROT.cv
 examples/textsecure/TextSecure-KCI.REPLAY_PROT.cv
-examplesnd/textsecure/TextSecure-AA.FS.NO_REPLAY_PROT.cv
-examplesnd/textsecure/TextSecure-AA.FS.REPLAY_PROT.cv
-examplesnd/textsecure/TextSecure-AA.STD.NO_REPLAY_PROT.cv
-examplesnd/textsecure/TextSecure-AA.STD.REPLAY_PROT.cv
-examplesnd/textsecure/TextSecure-AB-BA.FS.NO_REPLAY_PROT.cv
-examplesnd/textsecure/TextSecure-AB-BA.FS.REPLAY_PROT.cv
-examplesnd/textsecure/TextSecure-AB-BA.STD.NO_REPLAY_PROT.cv
-examplesnd/textsecure/TextSecure-AB-BA.STD.REPLAY_PROT.cv
-examplesnd/textsecure/TextSecure-KCI.NO_REPLAY_PROT.cv
-examplesnd/textsecure/TextSecure-KCI.REPLAY_PROT.cv
+examplesnd/textsecure*/TextSecure-AA.FS.NO_REPLAY_PROT.cv
+examplesnd/textsecure*/TextSecure-AA.FS.REPLAY_PROT.cv
+examplesnd/textsecure*/TextSecure-AA.STD.NO_REPLAY_PROT.cv
+examplesnd/textsecure*/TextSecure-AA.STD.REPLAY_PROT.cv
+examplesnd/textsecure*/TextSecure-AB-BA.FS.NO_REPLAY_PROT.cv
+examplesnd/textsecure*/TextSecure-AB-BA.FS.REPLAY_PROT.cv
+examplesnd/textsecure*/TextSecure-AB-BA.STD.NO_REPLAY_PROT.cv
+examplesnd/textsecure*/TextSecure-AB-BA.STD.REPLAY_PROT.cv
+examplesnd/textsecure*/TextSecure-KCI.NO_REPLAY_PROT.cv
+examplesnd/textsecure*/TextSecure-KCI.REPLAY_PROT.cv
 implementation/ssh/ssh-secrecy-key-EKCC.ocv
 implementation/ssh/ssh-secrecy-key-EKSC.ocv
 implementation/ssh/ssh-secrecy-key-IVCC.ocv
@@ -111,11 +111,19 @@ implementation/ssh/ssh-secrecy-key-MKCC.ocv
 implementation/ssh/ssh-secrecy-key-MKSC.ocv
 implementation/ssh/ssh-secrecy-key.ocv
 implementation/crypto.ml
+examples/textsecure/g?.cv
 examples/textsecure/indiff.aux
+examples/textsecure/indiff.dvi
 examples/textsecure/indiff.bbl
 examples/textsecure/indiff.blg
 examples/textsecure/indiff.log
 examples/textsecure/indiff.pdf
+examples/wireguard/*.out.cv
+examples/wireguard/*.cvres
+examples/wireguard/*replay_prot.cv
+examples/wireguard/hashgen
+examples/wireguard/hashoracles.cvl
+examples/wireguard/wireguard.cvl
 implementation/nspk/A
 implementation/nspk/Akeygen
 implementation/nspk/B
