updated ssh-profile, some more fixes

--- a/.gitignore
+++ b/.gitignore
@@ -103,13 +103,13 @@ examplesnd/textsecure*/TextSecure-AB-BA.STD.NO_REPLAY_PROT.cv
 examplesnd/textsecure*/TextSecure-AB-BA.STD.REPLAY_PROT.cv
 examplesnd/textsecure*/TextSecure-KCI.NO_REPLAY_PROT.cv
 examplesnd/textsecure*/TextSecure-KCI.REPLAY_PROT.cv
-implementation/ssh/ssh-secrecy-key-EKCC.ocv
-implementation/ssh/ssh-secrecy-key-EKSC.ocv
-implementation/ssh/ssh-secrecy-key-IVCC.ocv
-implementation/ssh/ssh-secrecy-key-IVSC.ocv
-implementation/ssh/ssh-secrecy-key-MKCC.ocv
-implementation/ssh/ssh-secrecy-key-MKSC.ocv
-implementation/ssh/ssh-secrecy-key.ocv
+implementation/ssh*/ssh-secrecy-key-EKCC.ocv
+implementation/ssh*/ssh-secrecy-key-EKSC.ocv
+implementation/ssh*/ssh-secrecy-key-IVCC.ocv
+implementation/ssh*/ssh-secrecy-key-IVSC.ocv
+implementation/ssh*/ssh-secrecy-key-MKCC.ocv
+implementation/ssh*/ssh-secrecy-key-MKSC.ocv
+implementation/ssh*/ssh-secrecy-key.ocv
 implementation/crypto.ml
 examples/textsecure/g?.cv
 examples/textsecure/indiff.aux
@@ -156,16 +156,16 @@ implementation/wlsk/keygen
 implementation/wlsk/resp
 implementation/wlsk/server
 implementation/wlsk/test_wlsk
-implementation/ssh/SSH_C.ml
-implementation/ssh/SSH_C.mli
-implementation/ssh/SSH_Keygen.ml
-implementation/ssh/SSH_Keygen.mli
-implementation/ssh/SSH_S.ml
-implementation/ssh/SSH_S.mli
-implementation/ssh/add_key
-implementation/ssh/client
-implementation/ssh/keygen
-implementation/ssh/server
+implementation/ssh*/SSH_C.ml
+implementation/ssh*/SSH_C.mli
+implementation/ssh*/SSH_Keygen.ml
+implementation/ssh*/SSH_Keygen.mli
+implementation/ssh*/SSH_S.ml
+implementation/ssh*/SSH_S.mli
+implementation/ssh*/add_key
+implementation/ssh*/client
+implementation/ssh*/keygen
+implementation/ssh*/server
 examplesnd/textsecure-keys-not-normalized/textsecure.cvl
 
 tests
