fixed bugs in website

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ pages:
     - mkdir public
     - cp -r website/copy/* public
     - cd website
-    - for i in *.prehtml ; do ; sed -f variables.sed $i > ../public/`basename $i`.html; done
+    - for i in *.prehtml ; do sed -f variables.sed $i > ../public/`basename $i .prehtml`.html; done
     - cat publis.html footer.html >> ../public/index.html
     - cd ..
   artifacts:
