common events in both sequences of games in indistinguishability proofs
Merge of branch 2022.12.int_ctxt_corrupt

- allow common events introduced by insert_event or insert in both
sequences of games in indistinguishability proofs.
- proofs of int_ctxt_corrupt from int_ctxt
- optimized number of exponentiations in the adversary time for CDH-RSR
- nice ideas in TODO

--- a/build
+++ b/build
@@ -53,7 +53,7 @@ case X$1 in
 	    Xdebug )
 		ocamlc -g -o ../cryptoverif$EXEC unix.cma str.cma $SRC
 		ocamlc -g -o ../cryptogen$EXEC $SRCGEN
-		ocamlc -g -I +threads -o ../analyze$EXEC -custom unix.cma threads.cms $SRCANAL
+		ocamlc -g -I +threads -o ../analyze$EXEC -custom unix.cma threads.cma $SRCANAL
 		ocamlc -g -o ../addexpectedtags$EXEC $SRCADDTAGS;;
 	    Xprofile )
 		ocamlopt -I /usr/include -o ../cryptoverif$EXEC str.cmxa unix.cmxa profileprim.c profile.mli profile.ml $SRC
